IGNITE-15404 Rework disctributed configuration flow. (#330)