@@ -23,6 +23,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
@@ -37,17 +38,16 @@ import org.apache.ignite.configuration.schemas.rest.RestConfiguration;
 import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
-import org.apache.ignite.internal.affinity.AffinityManager;
 import org.apache.ignite.internal.baseline.BaselineManager;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
 import org.apache.ignite.internal.configuration.ConfigurationRegistry;
+import org.apache.ignite.internal.configuration.schema.ExtendedTableConfigurationSchema;
 import org.apache.ignite.internal.manager.IgniteComponent;
 import org.apache.ignite.internal.metastorage.MetaStorageManager;
 import org.apache.ignite.internal.metastorage.server.persistence.RocksDBKeyValueStorage;
 import org.apache.ignite.internal.processors.query.calcite.QueryProcessor;
 import org.apache.ignite.internal.processors.query.calcite.SqlQueryProcessor;
 import org.apache.ignite.internal.raft.Loza;
-import org.apache.ignite.internal.schema.SchemaManager;
 import org.apache.ignite.internal.storage.DistributedConfigurationStorage;
 import org.apache.ignite.internal.storage.LocalConfigurationStorage;
 import org.apache.ignite.internal.table.distributed.TableManager;
@@ -115,12 +115,6 @@ public class IgniteImpl implements Ignite {
     /** Baseline manager. */
     private final BaselineManager baselineMgr;
 
-    /** Affinity manager. */
-    private final AffinityManager affinityMgr;
-
-    /** Schema manager. */
-    private final SchemaManager schemaMgr;
-
     /** Distributed table manager. */
     private final TableManager distributedTblMgr;
 
@@ -182,6 +176,7 @@ public class IgniteImpl implements Ignite {
             new RocksDBKeyValueStorage(workDir.resolve(METASTORAGE_DB_PATH))
         );
 
+        // TODO: IGNITE-15414 Schema validation refactoring with configuration validators.
         clusterCfgMgr = new ConfigurationManager(
             Arrays.asList(
                 ClusterConfiguration.KEY,
@@ -189,7 +184,7 @@ public class IgniteImpl implements Ignite {
             ),
             Map.of(),
             new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
-            List.of()
+            Collections.singletonList(ExtendedTableConfigurationSchema.class)
         );
 
         baselineMgr = new BaselineManager(
@@ -198,25 +193,11 @@ public class IgniteImpl implements Ignite {
             clusterSvc
         );
 
-        affinityMgr = new AffinityManager(
-            clusterCfgMgr,
-            metaStorageMgr,
-            baselineMgr
-        );
-
-        schemaMgr = new SchemaManager(
-            clusterCfgMgr,
-            metaStorageMgr,
-            vaultMgr
-        );
-
         distributedTblMgr = new TableManager(
-            nodeCfgMgr,
-            clusterCfgMgr,
-            metaStorageMgr,
-            schemaMgr,
-            affinityMgr,
+            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
             raftMgr,
+            baselineMgr,
+            metaStorageMgr,
             getPartitionsStorePath(workDir)
         );
 
@@ -287,8 +268,6 @@ public class IgniteImpl implements Ignite {
                 metaStorageMgr,
                 clusterCfgMgr,
                 baselineMgr,
-                affinityMgr,
-                schemaMgr,
                 distributedTblMgr,
                 qryEngine,
                 restModule,
@@ -331,8 +310,8 @@ public class IgniteImpl implements Ignite {
         });
 
         if (explicitStop.get()) {
-            doStopNode(List.of(vaultMgr, nodeCfgMgr, clusterSvc, raftMgr, metaStorageMgr,
-                clusterCfgMgr, baselineMgr, affinityMgr, schemaMgr, distributedTblMgr, qryEngine, restModule, clientHandlerModule));
+            doStopNode(List.of(vaultMgr, nodeCfgMgr, clusterSvc, raftMgr, metaStorageMgr, clusterCfgMgr, baselineMgr,
+                distributedTblMgr, qryEngine, restModule, clientHandlerModule));
         }
     }
 
